--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -5,12 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <script src="main.ts" type="module"></script>
+        <script src="index.tsx" type="module"></script>
         <link rel="stylesheet" href="index.css" />
     </head>
-    <body>
-        <div class="root-container">
-            <canvas class="root-canvas"></canvas>
-        </div>
+    <body class="h-screen overflow-hidden">
+        <div id="root"></div>
     </body>
 </html>
